--- a/style.css
+++ b/style.css
@@ -1,3 +1,112 @@
+@import url("http://fonts.cdnfonts.com/css/cocogoose");
+*,
+::after,
+::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+body {
+  font-family: "cocogoose", sans-serif;
+  font-size: 1rem;
+  width: 100%;
+  height: 100vh;
+  background-color: #d3d3d3;
+  line-height: 2rem;
+  color: #272a31;
+}
+body a {
+  text-decoration: none;
+  color: #272a31;
+}
+body li {
+  list-style-type: none;
+}
+body .menu {
+  width: 3.5rem;
+  position: absolute;
+  left: 1.5rem;
+  top: 1.5rem;
+}
+body .menu.exit {
+  display: none;
+}
+body .header {
+  display: none;
+}
+body main .welcome {
+  width: 100%;
+  background-image: url(./images/bgyouth-tech.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  height: auto;
+}
+body main .container {
+  padding: 8rem 2rem;
+}
+body main .container .gradient {
+  font-family: "lato", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #ec5242;
+}
+body main .container .theme {
+  font-family: "cocogoose", sans-serif;
+  font-size: 5rem;
+  line-height: 5rem;
+  padding-top: 1rem;
+  color: #ec5242;
+}
+body main .container .intro-text {
+  margin: 2rem 1.5rem;
+  max-width: 90%;
+  background-color: #d3d3d3;
+  padding: 1.5rem;
+  border: 2px solid #fff;
+  border-radius: 0.25rem;
+}
+body main .container .date {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 4.5rem;
+}
+body main .container address {
+  font-size: 1.5rem;
+}
+body main .features {
+  background-image: url(./images/features-bg.jpg);
+  background-repeat: repeat;
+  background-size: auto;
+  width: 100%;
+  height: auto;
+}
+body main .features .program {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+body main .features .program .pro-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: nowrap;
+  background-color: rgba(211, 211, 211, 0.2);
+  color: #d3d3d3;
+}
+body main .features .program .pro-cards img {
+  width: 50px;
+  height: auto;
+  margin: 0;
+}
+body main .features .program .pro-cards .feat-bold {
+  color: #ec5242;
+  font-weight: 700;
+  font-size: 1.25rem;
+}
+body main .features .program .pro-cards .small-text {
+  max-width: 500px;
+}
 
 /*# sourceMappingURL=style.css.map */
