--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("http://fonts.cdnfonts.com/css/cocogoose");
+@import url("http://fonts.cdnfonts.com/css/lato");
 *,
 ::after,
 ::before {
@@ -8,12 +9,12 @@
 }
 
 body {
-  font-family: "cocogoose", sans-serif;
-  font-size: 1rem;
+  font-family: "lato", sans-serif;
+  font-size: 0.8rem;
   width: 100%;
   height: 100vh;
   background-color: #d3d3d3;
-  line-height: 2rem;
+  line-height: 1.5rem;
   color: #272a31;
 }
 body a {
@@ -35,44 +36,84 @@ body .menu.exit {
 body .header {
   display: none;
 }
-body main .welcome {
-  width: 100%;
-  background-image: url(./images/bgyouth-tech.svg);
+body .container {
+  padding: 2rem;
+  position: relative;
+}
+body main {
+  background-image: url(./images/masked.svg);
   background-repeat: no-repeat;
   background-size: auto;
-  height: auto;
+  background-position: top left;
 }
-body main .container {
-  padding: 8rem 2rem;
+body main .intro {
+  font-size: 1.5rem;
+  color: #d3d3d3;
+  margin: 0 auto 1rem auto;
+  text-align: center;
 }
-body main .container .gradient {
+body main .line {
+  width: 10%;
+  text-align: center;
+  margin: 0 auto 2rem auto;
+  color: #ec5242;
+}
+body main .welcome {
+  background-image: url(./images/mobile-bgyouth-tech.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+body main .welcome .intro.gradient {
   font-family: "lato", sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
-  color: #ec5242;
+  background-image: -webkit-linear-gradient(-35deg, #f65112, #a00000, #f40001, #ec5242);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: 6.5rem;
+  text-align: left;
 }
-body main .container .theme {
+body main .welcome .theme {
   font-family: "cocogoose", sans-serif;
-  font-size: 5rem;
-  line-height: 5rem;
+  font-size: 4.5rem;
+  line-height: 4.5rem;
   padding-top: 1rem;
-  color: #ec5242;
+  background-image: -webkit-linear-gradient(-35deg, #a00000, #f65112, #ec5242, #f40001, #ec5242);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 300%;
+  animation: theme-motion 10s infinite alternate;
 }
-body main .container .intro-text {
-  margin: 2rem 1.5rem;
-  max-width: 90%;
+@keyframes theme-motion {
+  0% {
+    background-position: left;
+  }
+  50% {
+    background-position: right bottom;
+  }
+  75% {
+    background-position: left bottom;
+  }
+  100% {
+    background-position: right;
+  }
+}
+body main .welcome .intro-text {
+  margin: 2rem 0;
   background-color: #d3d3d3;
-  padding: 1.5rem;
+  padding: 1rem;
   border: 2px solid #fff;
   border-radius: 0.25rem;
+  opacity: 0.8;
 }
-body main .container .date {
-  font-size: 2.5rem;
-  font-weight: 700;
-  line-height: 4.5rem;
+body main .welcome .date {
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: "cocogoose", sans-serif;
 }
-body main .container address {
-  font-size: 1.5rem;
+body main .welcome address {
+  font-size: 1rem;
+  padding: 0.5rem 0 4rem 0;
 }
 body main .features {
   background-image: url(./images/features-bg.jpg);
@@ -85,28 +126,122 @@ body main .features .program {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  justify-content: space-between;
 }
 body main .features .program .pro-cards {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 1rem;
   align-items: center;
   flex-wrap: nowrap;
   background-color: rgba(211, 211, 211, 0.2);
   color: #d3d3d3;
+  gap: 0.5rem;
+  border-radius: 5px;
 }
 body main .features .program .pro-cards img {
-  width: 50px;
-  height: auto;
-  margin: 0;
+  width: 10%;
+  min-width: 3rem;
+  margin: 0.5rem 0 0 0;
 }
 body main .features .program .pro-cards .feat-bold {
+  width: 20%;
   color: #ec5242;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 body main .features .program .pro-cards .small-text {
-  max-width: 500px;
+  width: 60%;
+  font-size: 0.8rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+}
+body main .features .program a.intro {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #d3d3d3;
+  margin-top: 2.5rem;
+}
+body main .features .program a.intro.lg {
+  display: none;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+body main .features .program a.intro.sm {
+  background-color: #ec5242;
+  padding: 1.5rem 2rem;
+  border-radius: 5px;
+}
+body main .speaker-section h3.intro {
+  text-align: center;
+}
+body main .speaker-section .intro {
+  color: #272a31;
+  text-align: left;
+}
+body main .speaker-section .featured-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+body main .speaker-section .featured-container .speaker {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1.25rem;
+}
+body main .speaker-section .featured-container .speaker img {
+  max-width: 110px;
+  max-height: 110px;
+  border-radius: 5%;
+  background-color: #272a31;
+  box-shadow: 2px 2px 4px;
+  border-bottom-right-radius: 30%;
+}
+body main .speaker-section .featured-container .speaker .white {
+  font-size: 1.15rem;
+  margin: 0;
+}
+body main .speaker-section .featured-container .speaker .line {
+  margin: 0.5rem 0 0.8rem 0;
+  width: 5%;
+  opacity: 0.3;
+  color: #272a31;
+}
+body main .speaker-section .featured-container .speaker .info {
+  color: #ec5242;
+}
+body main .partners {
+  background-color: #272a31;
+}
+body main .partners .intro {
+  opacity: 0.5;
+}
+body main .partners .sponsors-logo {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2.5rem;
+  justify-content: space-evenly;
+  padding-bottom: 2rem;
+}
+body main .partners .sponsors-logo img {
+  width: 30%;
+  max-width: 100px;
+}
+body footer {
+  width: 100%;
+  text-align: left;
+  font-size: 0.8rem;
+}
+body footer .container {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+}
+body footer .container img {
+  max-width: 150px;
 }
 
 /*# sourceMappingURL=style.css.map */
