--- a/style.css
+++ b/style.css
@@ -40,12 +40,6 @@ body .container {
   padding: 2rem;
   position: relative;
 }
-body main {
-  background-image: url(./images/masked.svg);
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-position: top left;
-}
 body main .intro {
   font-size: 1.5rem;
   color: #d3d3d3;
@@ -59,9 +53,10 @@ body main .line {
   color: #ec5242;
 }
 body main .welcome {
-  background-image: url(./images/mobile-bgyouth-tech.svg);
-  background-repeat: no-repeat;
+  background-image: url(./images/bgyouth-tech.svg);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
 }
 body main .welcome .intro.gradient {
   font-family: "lato", sans-serif;
@@ -234,14 +229,113 @@ body footer {
   width: 100%;
   text-align: left;
   font-size: 0.8rem;
+  line-height: 1.15rem;
 }
 body footer .container {
   display: flex;
   gap: 2rem;
   justify-content: space-between;
+  align-items: center;
 }
 body footer .container img {
   max-width: 150px;
+}
+body footer .container a {
+  color: #ec5242;
+}
+body footer .container .foot-note {
+  margin-top: 1rem;
+}
+
+.aboutYnT .about {
+  background-image: url(./images/masked.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: 250px 500px;
+}
+.aboutYnT .about .text {
+  text-align: center;
+}
+.aboutYnT .about .text span {
+  color: #ec5242;
+  font-weight: bold;
+}
+.aboutYnT .about .text a {
+  font-size: 0.8rem;
+  text-decoration: underline;
+  transition: color 1s ease;
+}
+.aboutYnT .about .text a:hover {
+  color: #ec5242;
+  opacity: 0.8;
+}
+
+.about-logo {
+  background-color: #fff;
+}
+.about-logo .intro {
+  color: #272a31;
+  line-height: 1.95rem;
+}
+.about-logo .intro-text {
+  text-align: center;
+}
+.about-logo .specimen {
+  margin: 2rem 0;
+  border: 2px solid #d3d3d3;
+  padding: 1.5rem;
+  text-align: center;
+}
+.about-logo .specimen img {
+  width: 70%;
+  text-align: center;
+  max-width: 300px;
+}
+
+.events .intro {
+  color: #272a31;
+  line-height: 1.95rem;
+}
+.events .intro-text {
+  text-align: center;
+}
+.events .specimen-past {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  text-align: center;
+  font-family: "cocogoose", sans-serif;
+}
+.events .specimen-past img {
+  width: 100%;
+  max-width: 400px;
+  max-height: 220px;
+}
+.events .specimen-past .overlay {
+  position: relative;
+}
+.events .specimen-past .overlay .overlay-text {
+  position: absolute;
+  width: 100%;
+  max-width: 400px;
+  max-height: 220px;
+  margin-top: -110px;
+  top: 0;
+  left: 50%;
+  color: #fff;
+  padding: 86px 0;
+  background-color: rgba(206, 93, 82, 0.7);
+  transform: translate(-50%, 50%);
+  -ms-transform: translate(-50%, 50%);
+}
+.events .specimen-past .overlay .overlay-text .date {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+.events .specimen-past:hover .overlay-text {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
