--- a/style.scss
+++ b/style.scss
@@ -67,11 +67,6 @@ body {
 
     main {
       // Common rules for specific elements
-      background-image: url(./images/masked.svg);
-      background-repeat: no-repeat;
-      background-size: auto;
-      background-position: top left;
-
       .intro {
         font-size: 1.5rem;
         color: colors(grayWhite);
@@ -88,10 +83,11 @@ body {
     
       // Rules for hero page
       .welcome {
-        background-image: url(./images/mobile-bgyouth-tech.svg);
-        background-repeat: no-repeat;
+        background-image: url(./images/bgyouth-tech.svg);
         background-size: cover;
-       
+        background-repeat: no-repeat;
+        background-position: 100% 100%;
+        
         .intro.gradient {
           font-family: $text;
           font-size: 1.5rem;
@@ -302,15 +298,142 @@ body {
     width: 100%;
     text-align: left;
     font-size: 0.8rem;
+    line-height: 1.15rem;
 
     .container {
       display: flex;
       gap: 2rem;
       justify-content: space-between;
+      align-items: center;
 
       img {
         max-width: 150px;
       }
+
+      a {
+        color: colors(coolPink);
+      }
+
+      .foot-note {
+        margin-top: 1rem;
+      }
     }
   }
 }
+
+// Rules for about.html page
+.aboutYnT {
+  .about {
+    background-image: url(./images/masked.svg);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: 250px 500px;
+
+    .text {
+      text-align: center;
+      
+      span {
+        color: colors(coolPink);
+        font-weight: bold;
+      }
+
+      a {
+        font-size: 0.8rem;
+        text-decoration: underline;
+        transition: color 1s ease;
+
+        &:hover {
+          color: colors(coolPink);
+          opacity: 0.8;
+        }
+      }
+
+    }
+  }
+}
+
+// About Logo Section
+.about-logo {
+  background-color: #fff;
+
+  .intro {
+    color: colors(darkShade);
+    line-height: 1.95rem;
+  }
+
+  .intro-text {
+    text-align: center;
+  }
+
+  .specimen {
+    margin: 2rem 0;
+    border: 2px solid colors(grayWhite);
+    padding: 1.5rem;
+    text-align: center;
+
+    img {
+      width: 70%;
+      text-align: center;
+      max-width: 300px;
+    }
+  }
+}
+
+// Events section
+.events {
+  .intro {
+    color: colors(darkShade);
+    line-height: 1.95rem;
+  }
+
+  .intro-text {
+    text-align: center;
+  }
+
+  .specimen-past {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
+    text-align: center;
+    font-family: $title;
+
+    img {
+      width:100%;
+      max-width: 400px;
+      max-height: 220px;
+    }
+
+    .overlay {
+      position: relative;
+      //margin: 0 auto;
+      
+      .overlay-text {
+        position: absolute;
+        width: 100%;
+        max-width: 400px;
+        max-height: 220px;
+        margin-top: -110px;
+        top: 0;
+        left: 50%;
+        color: #fff;
+        padding: 86px 0;
+        background-color: rgba(206, 93, 82, 0.7);
+        transform: translate(-50%, 50%);
+        -ms-transform: translate(-50%, 50%);
+
+        .date {
+          font-size: 1.5rem;
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+    &:hover .overlay-text { // to be toggled with javascript
+      display: none;
+    }
+  }
+  
+}
+
+
