--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@
 }
 
 body {
+  position: relative;
   font-family: "lato", sans-serif;
   font-size: 0.8rem;
   width: 100%;
   height: 100vh;
-  background-color: #d3d3d3;
   line-height: 1.5rem;
   color: #272a31;
 }
@@ -24,21 +24,86 @@ body a {
 body li {
   list-style-type: none;
 }
+body section {
+  padding-bottom: 2rem;
+}
+body .menu-controls {
+  position: relative;
+}
 body .menu {
   width: 3.5rem;
   position: absolute;
   left: 1.5rem;
   top: 1.5rem;
-}
-body .menu.exit {
-  display: none;
+  z-index: 20;
 }
 body .header {
+  position: relative;
+}
+body .header .navbar {
+  position: fixed;
+  padding: 6rem 2rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  background-color: #ec5242;
+  z-index: 10;
+  width: 90%;
+  height: 100%;
+  overflow: auto;
   display: none;
+}
+body .header .navbar .logo {
+  display: none;
+}
+body .header .navbar nav {
+  width: 100%;
+}
+body .header .navbar nav li {
+  position: relative;
+}
+body .header .navbar nav a {
+  font-size: 1rem;
+  line-height: 4rem;
+  font-weight: 700;
+  color: #d3d3d3;
+}
+body .header .navbar nav a img {
+  position: relative;
+  top: 6px;
+  padding-top: 0.5rem;
+}
+body .header .navbar nav .hide-sm {
+  display: none;
+}
+body .header .navbar .pad {
+  padding-bottom: 5rem;
+  padding-top: 1rem;
+}
+body .header .navbar .padimg {
+  top: -50px;
+}
+body .header .navbar .hide {
+  color: #272a31;
+  display: inline-block;
+  margin-left: 0.5rem;
+}
+body .header .navbar .line {
+  color: #272a31;
+  opacity: 0.1;
 }
 body .container {
   padding: 2rem;
   position: relative;
+}
+body .container .text {
+  max-width: 400px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 729px) {
+  body .container {
+    max-width: 80vw;
+    margin: 0 auto;
+  }
 }
 body main .intro {
   font-size: 1.5rem;
@@ -99,7 +164,6 @@ body main .welcome .intro-text {
   padding: 1rem;
   border: 2px solid #fff;
   border-radius: 0.25rem;
-  opacity: 0.8;
 }
 body main .welcome .date {
   font-size: 1.8rem;
@@ -187,6 +251,11 @@ body main .speaker-section .featured-container .speaker {
   justify-content: space-between;
   gap: 1.25rem;
 }
+@media screen and (min-width: 768px) {
+  body main .speaker-section .featured-container .speaker {
+    justify-content: flex-start;
+  }
+}
 body main .speaker-section .featured-container .speaker img {
   max-width: 110px;
   max-height: 110px;
@@ -251,7 +320,7 @@ body footer .container .foot-note {
   background-image: url(./images/masked.svg);
   background-repeat: no-repeat;
   background-size: auto;
-  background-position: 250px 500px;
+  background-position: top 100px right;
 }
 .aboutYnT .about .text {
   text-align: center;
@@ -264,6 +333,7 @@ body footer .container .foot-note {
   font-size: 0.8rem;
   text-decoration: underline;
   transition: color 1s ease;
+  cursor: pointer;
 }
 .aboutYnT .about .text a:hover {
   color: #ec5242;
@@ -292,6 +362,9 @@ body footer .container .foot-note {
   max-width: 300px;
 }
 
+.events {
+  background-color: #d3d3d3;
+}
 .events .intro {
   color: #272a31;
   line-height: 1.95rem;
@@ -315,6 +388,7 @@ body footer .container .foot-note {
 }
 .events .specimen-past .overlay {
   position: relative;
+  cursor: pointer;
 }
 .events .specimen-past .overlay .overlay-text {
   position: absolute;
