--- a/style.scss
+++ b/style.scss
@@ -27,11 +27,11 @@ $colors: (
 }
 
 body {
+  position: relative;
   font-family: $text;
   font-size: 0.8rem;
   width: 100%;
   height: 100vh;
-  background-color: colors(grayWhite);
   line-height: 1.5rem;
   color: colors(darkShade);
 
@@ -44,24 +44,102 @@ body {
     list-style-type: none;
   }
 
+  section {
+    padding-bottom: 2rem;
+  }
+  
+// Menu controls for user toggling
+.menu-controls {
+  position: relative;
+}
   .menu {
-  width: 3.5rem;
-  position: absolute;
-  left: 1.5rem;
-  top: 1.5rem;
+    width: 3.5rem;
+    position: absolute;
+    left: 1.5rem;
+    top: 1.5rem;
+    z-index: 20;
+  }
 
-    &.exit {
+.header {
+  position: relative;
+  
+    .navbar {
+      position: fixed;
+      padding: 6rem 2rem;
+      margin-bottom: 2rem;
+      width: 100%;
+      background-color: #ec5242;
+      z-index: 10;
+      width: 90%;
+      height: 100%;
+      overflow: auto;
       display: none;
-    }  
-  }
 
- .header {
-    display: none;
-  }
+      .logo {
+        display: none;
+      }
+  
+      nav {
+        width: 100%;
+
+        li {
+          position: relative;
+        }
+  
+        a {
+          font-size: 1rem;
+          line-height: 4rem;
+          font-weight: 700;
+          color: colors(grayWhite);
+
+          img {
+            position: relative;
+            top: 6px;
+            padding-top: 0.5rem;
+          }
+        }
+
+        .hide-sm {
+          display: none;
+        }
+      }
+
+      .pad {
+        padding-bottom: 5rem;
+        padding-top: 1rem;
+
+        &img {
+          top: -50px;
+        }
+      }
+
+      .hide {
+        color: colors(darkShade);
+        display: inline-block;
+        margin-left: 0.5rem;
+      }
+
+      .line {
+        color: colors(darkShade);
+        opacity: 0.1;
+      }
+    }
+    
+// Ends here
+}
 
   .container {
     padding: 2rem;
     position: relative;
+
+    .text {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    @media screen and (min-width: 729px) {
+      max-width: 80vw;
+      margin: 0 auto;
+    }
   }
 
 
@@ -104,6 +182,7 @@ body {
           font-size: 4.5rem;
           line-height: 4.5rem;
           padding-top: 1rem;
+          //max-width: ;
           background-image: -webkit-linear-gradient(-35deg, #a00000, #f65112, #ec5242, #f40001, #ec5242);
           background-clip: text;
           -webkit-text-fill-color: transparent;
@@ -136,7 +215,6 @@ body {
           padding: 1rem;
           border: 2px solid #fff;
           border-radius: 0.25rem;
-          opacity: 0.8;
         }
 
         .date {
@@ -242,6 +320,10 @@ body {
           justify-content: space-between;
           gap: 1.25rem;
 
+          @media screen and (min-width: 768px) {
+            justify-content: flex-start;
+          }
+
           img {
             max-width: 110px;
             max-height: 110px;
@@ -327,7 +409,7 @@ body {
     background-image: url(./images/masked.svg);
     background-repeat: no-repeat;
     background-size: auto;
-    background-position: 250px 500px;
+    background-position: top 100px right;
 
     .text {
       text-align: center;
@@ -341,6 +423,7 @@ body {
         font-size: 0.8rem;
         text-decoration: underline;
         transition: color 1s ease;
+        cursor: pointer;
 
         &:hover {
           color: colors(coolPink);
@@ -381,6 +464,7 @@ body {
 
 // Events section
 .events {
+  background-color: colors(grayWhite);
   .intro {
     color: colors(darkShade);
     line-height: 1.95rem;
@@ -407,7 +491,7 @@ body {
 
     .overlay {
       position: relative;
-      //margin: 0 auto;
+      cursor: pointer;
       
       .overlay-text {
         position: absolute;
@@ -435,5 +519,4 @@ body {
   }
   
 }
-
 
