--- a/style.css
+++ b/style.css
@@ -35,22 +35,42 @@ body .menu {
   position: absolute;
   left: 1.5rem;
   top: 1.5rem;
-  z-index: 20;
+  z-index: 2500;
 }
 body .header {
   position: relative;
+  display: flex;
+  z-index: 1000;
+}
+@media screen and (min-width: 768px) {
+  body .header {
+    height: 6.5rem;
+    width: 100%;
+    padding: 20px;
+  }
+  body .header .menu {
+    margin-left: 820px;
+    display: block;
+    z-index: 50000;
+  }
+}
+@media screen and (min-width: 960px) {
+  body .header .menu {
+    display: none;
+  }
 }
 body .header .navbar {
   position: fixed;
   padding: 6rem 2rem;
   margin-bottom: 2rem;
-  width: 100%;
   background-color: #ec5242;
-  z-index: 10;
+  z-index: 10000;
   width: 90%;
   height: 100%;
   overflow: auto;
   display: none;
+  flex-direction: column;
+  transform: transform(250ms, ease-in-out);
 }
 body .header .navbar .logo {
   display: none;
@@ -62,7 +82,7 @@ body .header .navbar nav li {
   position: relative;
 }
 body .header .navbar nav a {
-  font-size: 1rem;
+  font-size: 1.25rem;
   line-height: 4rem;
   font-weight: 700;
   color: #d3d3d3;
@@ -72,9 +92,6 @@ body .header .navbar nav a img {
   top: 6px;
   padding-top: 0.5rem;
 }
-body .header .navbar nav .hide-sm {
-  display: none;
-}
 body .header .navbar .pad {
   padding-bottom: 5rem;
   padding-top: 1rem;
@@ -82,14 +99,142 @@ body .header .navbar .pad {
 body .header .navbar .padimg {
   top: -50px;
 }
-body .header .navbar .hide {
-  color: #272a31;
-  display: inline-block;
-  margin-left: 0.5rem;
-}
-body .header .navbar .line {
+body .header .navbar .liner {
   color: #272a31;
   opacity: 0.1;
+}
+@media screen and (min-width: 768px) {
+  body .header .navbar {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    background-color: #fff;
+    z-index: 10000;
+    width: 100%;
+    height: 6rem;
+    overflow: hidden;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+  }
+  body .header .navbar .liner {
+    display: none;
+  }
+  body .header .navbar .logo {
+    display: block;
+  }
+  body .header .navbar .logo .yntech-logo {
+    max-width: 150px;
+    margin: -10px 0 0 60px;
+  }
+  body .header .navbar nav {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 960px) {
+  body .header .navbar nav {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  body .header .navbar nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding: 0.25rem 0.5rem;
+  }
+  body .header .navbar nav ul a {
+    display: inline-block;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    font-weight: 700;
+    color: #272a31;
+  }
+  body .header .navbar nav ul a img {
+    display: inline-block;
+  }
+}
+@media screen and (min-width: 768px) {
+  body .header .navbar nav .nav-list {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 960px) {
+  body .header .navbar nav .nav-list {
+    display: flex;
+    gap: 2rem;
+    width: 100%;
+    height: inherit;
+    position: relative;
+    top: 20px;
+    left: 200px;
+  }
+  body .header .navbar nav .nav-list a {
+    font-weight: 500;
+    transform: scale(1.05);
+    transition: all 0.5s;
+  }
+  body .header .navbar nav .nav-list a:hover {
+    color: #ec5242;
+    border-bottom: 1px solid #272a31;
+    line-height: 2rem;
+  }
+  body .header .navbar nav .nav-list a:active {
+    color: #ec5242;
+    opacity: 0.7;
+  }
+}
+@media screen and (min-width: 768px) {
+  body .header .navbar nav .nav-list li a.gradient {
+    margin-left: 2rem;
+    border: 2px solid #ec5242;
+    border-radius: 20px;
+    padding: 0.5rem 1.5rem 0.75rem 1.5rem;
+    margin-top: -10px;
+    font-weight: 700;
+    color: #ec5242;
+  }
+  body .header .navbar nav .nav-list li a.gradient:hover {
+    background-color: #ec5242;
+    color: white;
+    border: 2px solid #272a31;
+  }
+}
+@media screen and (min-width: 768px) {
+  body .header .navbar nav .acct-detail .acct-list {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #272a31;
+    border-bottom-left-radius: 30px;
+    display: none;
+    width: 50px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 960px) {
+  body .header .navbar nav .acct-detail .acct-list {
+    display: inline-block;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 960px) {
+  body .header .navbar nav .acct-detail .acct-list a img.status {
+    width: 1.5rem;
+    padding: 0;
+    top: 0;
+  }
+  body .header .navbar nav .acct-detail .acct-list a .tweet {
+    top: -20px;
+  }
+  body .header .navbar nav .acct-detail .acct-list a .acct {
+    top: -50px;
+  }
+}
+@media screen and (min-width: 768px) {
+  body .header .navbar nav .acct-detail .acct-list .pad {
+    padding: 0 0.5rem 0 0;
+  }
 }
 body .container {
   padding: 2rem;
@@ -101,7 +246,7 @@ body .container .text {
 }
 @media screen and (min-width: 768px) {
   body .container {
-    max-width: 80vw;
+    max-width: 90vw;
     margin: 0 auto;
   }
 }
@@ -117,31 +262,41 @@ body main .line {
   margin: 0 auto 2rem auto;
   color: #ec5242;
 }
+@media screen and (min-width: 768px) {
+  body main {
+    margin-top: 30px;
+  }
+}
 body main .welcome {
   background-image: url(./images/bgyouth-tech.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100% 100%;
 }
+body main .welcome .masked {
+  background-image: url(./images/mask-extra.png);
+  background-repeat: repeat;
+  background-size: auto;
+}
 body main .welcome .intro.gradient {
   font-family: "lato", sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
   background-image: -webkit-linear-gradient(-35deg, #f65112, #a00000, #f40001, #ec5242);
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-top: 6.5rem;
   text-align: left;
 }
 body main .welcome .theme {
   font-family: "cocogoose", sans-serif;
-  font-size: 4.5rem;
-  line-height: 4.5rem;
+  font-size: 4rem;
+  line-height: 5rem;
   padding-top: 1rem;
-  background-image: -webkit-linear-gradient(-35deg, #a00000, #f65112, #ec5242, #f40001, #ec5242);
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: 300%;
+  background-image: -webkit-linear-gradient(45deg, #f40001, #ec5242, rgb(255, 64, 0), rgb(255, 123, 0), #a00000, #f65112, #ec5242);
   animation: theme-motion 10s infinite alternate;
 }
 @keyframes theme-motion {
@@ -158,6 +313,18 @@ body main .welcome .theme {
     background-position: right;
   }
 }
+@media screen and (max-width: 609px) {
+  body main .welcome .theme {
+    max-width: 95%;
+    font-size: 9vw;
+    line-height: 10vw;
+  }
+}
+@media screen and (min-width: 768px) {
+  body main .welcome .theme {
+    font-size: 4.5rem;
+  }
+}
 body main .welcome .intro-text {
   margin: 2rem 0;
   background-color: #d3d3d3;
@@ -165,21 +332,46 @@ body main .welcome .intro-text {
   border: 2px solid #fff;
   border-radius: 0.25rem;
 }
+@media screen and (min-width: 768px) {
+  body main .welcome .intro-text {
+    max-width: 60vw;
+    font-size: 130%;
+    line-height: 2rem;
+  }
+}
 body main .welcome .date {
   font-size: 1.8rem;
-  font-weight: 400;
+  font-weight: 600;
   font-family: "cocogoose", sans-serif;
+}
+@media screen and (max-width: 609px) {
+  body main .welcome .date {
+    font-size: 5vw;
+    line-height: 2.85rem;
+  }
+}
+@media screen and (min-width: 960px) {
+  body main .welcome .date {
+    font-size: 2.5rem;
+    line-height: 4vw;
+  }
 }
 body main .welcome address {
   font-size: 1rem;
-  padding: 0.5rem 0 4rem 0;
+  padding: 0 0 7rem 0;
+  line-height: 3vw;
+}
+@media screen and (min-width: 960px) {
+  body main .welcome address {
+    font-size: 1.5rem;
+  }
 }
 body main .features {
   background-image: url(./images/features-bg.jpg);
   background-repeat: repeat;
   background-size: auto;
   width: 100%;
-  height: auto;
+  min-height: 500px;
 }
 body main .features .program {
   display: flex;
@@ -187,51 +379,125 @@ body main .features .program {
   gap: 1rem;
   justify-content: space-between;
 }
+@media screen and (min-width: 768px) {
+  body main .features .program {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(165px, 1fr));
+    border: none;
+    gap: 1px;
+    height: 100%;
+    padding: 2rem 0;
+    text-align: center;
+  }
+}
 body main .features .program .pro-cards {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 1rem;
   align-items: center;
-  flex-wrap: nowrap;
-  background-color: rgba(211, 211, 211, 0.2);
+  flex-wrap: no-wrap;
+  background-color: rgba(255, 255, 255, 0.1);
   color: #d3d3d3;
   gap: 0.5rem;
   border-radius: 5px;
 }
+@media screen and (min-width: 768px) {
+  body main .features .program .pro-cards {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.25rem;
+    box-shadow: 2px 2px 10x 20px;
+    border-radius: 0;
+    height: auto;
+    min-height: 160px;
+  }
+  body main .features .program .pro-cards:hover {
+    border: 2px solid #fff;
+  }
+}
 body main .features .program .pro-cards img {
-  width: 10%;
+  width: 15%;
   min-width: 3rem;
   margin: 0.5rem 0 0 0;
 }
+@media screen and (min-width: 768px) {
+  body main .features .program .pro-cards img {
+    margin-top: 0.6rem;
+    width: 45%;
+  }
+}
 body main .features .program .pro-cards .feat-bold {
-  width: 20%;
+  max-width: 20%;
   color: #ec5242;
   font-weight: 700;
-  font-size: 1rem;
+  font-size: 1.25rem;
   line-height: 1.25rem;
 }
+@media screen and (min-width: 768px) {
+  body main .features .program .pro-cards .feat-bold {
+    width: 100%;
+    max-width: 220px;
+    font-weight: 600;
+    font-size: 1.35rem;
+    line-height: 1.5rem;
+    text-align: center;
+  }
+}
 body main .features .program .pro-cards .small-text {
-  width: 60%;
+  width: 40%;
   font-size: 0.8rem;
   line-height: 1.5rem;
   font-weight: 700;
 }
-body main .features .program a.intro {
+@media screen and (min-width: 768px) {
+  body main .features .program .pro-cards .small-text {
+    width: 100%;
+    line-height: 1.25rem;
+    font-weight: 500;
+    min-height: 150px;
+  }
+}
+body main .features a.intro {
   font-size: 1rem;
   font-weight: 700;
   color: #d3d3d3;
   margin-top: 2.5rem;
 }
-body main .features .program a.intro.lg {
+body main .features a.intro.lg {
   display: none;
   text-transform: uppercase;
   text-decoration: underline;
 }
-body main .features .program a.intro.sm {
+@media screen and (min-width: 768px) {
+  body main .features a.intro.lg {
+    display: block;
+  }
+  body main .features a.intro.lg:hover {
+    color: #ec5242;
+  }
+}
+body main .features a.intro.sm {
+  display: block;
+  width: 80%;
+  font-size: 3.5vw;
   background-color: #ec5242;
   padding: 1.5rem 2rem;
   border-radius: 5px;
+  box-shadow: 0.5px 0.5px 3px 1px #000;
+  transform: scale(1.05);
+  transition: all 0.3s ease-out;
+}
+body main .features a.intro.sm:hover {
+  color: #ec5242;
+  background: #272a31;
+  box-shadow: none;
+}
+@media screen and (min-width: 768px) {
+  body main .features a.intro.sm {
+    display: none;
+  }
 }
 body main .speaker-section h3.intro {
   text-align: center;
@@ -244,17 +510,38 @@ body main .speaker-section .featured-container {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  position: relative;
+  padding-top: 2rem;
+}
+body main .speaker-section .featured-container .full {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  body main .speaker-section .featured-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 4rem;
+  }
+  body main .speaker-section .featured-container .full {
+    display: block;
+    position: absolute;
+    width: 100%;
+  }
+  body main .speaker-section .featured-container .full.one {
+    top: 37%;
+  }
+  body main .speaker-section .featured-container .full.two {
+    top: 70%;
+  }
+  body main .speaker-section .featured-container .speaker {
+    justify-content: flex-start;
+  }
 }
 body main .speaker-section .featured-container .speaker {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   gap: 1.25rem;
-}
-@media screen and (min-width: 768px) {
-  body main .speaker-section .featured-container .speaker {
-    justify-content: flex-start;
-  }
 }
 body main .speaker-section .featured-container .speaker img {
   max-width: 110px;
@@ -296,15 +583,21 @@ body main .partners .sponsors-logo img {
 }
 body footer {
   width: 100%;
-  text-align: left;
   font-size: 0.8rem;
   line-height: 1.15rem;
+  font-weight: 600;
 }
 body footer .container {
   display: flex;
-  gap: 2rem;
-  justify-content: space-between;
+  gap: 4rem;
+  justify-content: flex-start;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  body footer .container {
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
 body footer .container img {
   max-width: 150px;
@@ -320,7 +613,25 @@ body footer .container .foot-note {
   background-image: url(./images/masked.svg);
   background-repeat: no-repeat;
   background-size: auto;
-  background-position: top 100px right;
+  background-position: top 380px left 50px;
+}
+@media screen and (min-width: 768px) {
+  .aboutYnT .about {
+    margin: 0 auto;
+    width: 80vw;
+  }
+  .aboutYnT .about h1.theme {
+    text-align: center;
+    margin: 6rem auto;
+  }
+  .aboutYnT .about .gradient {
+    display: none;
+  }
+  .aboutYnT .about p.intro-text {
+    text-align: center;
+    margin: 3rem auto;
+    padding: 2rem 3rem;
+  }
 }
 .aboutYnT .about .text {
   text-align: center;
@@ -343,12 +654,36 @@ body footer .container .foot-note {
 .about-logo {
   background-color: #fff;
 }
+@media screen and (min-width: 960px) {
+  .about-logo {
+    background-image: url(./images/mask3.png);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: top 0 right 150px;
+  }
+  .about-logo .intro-text {
+    max-width: 80%;
+    margin: 3rem auto;
+    font-size: 1.25rem;
+    line-height: 2rem;
+  }
+  .about-logo .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 60%;
+  }
+  .about-logo img {
+    width: 100%;
+    padding-bottom: 1rem;
+  }
+}
 .about-logo .intro {
   color: #272a31;
   line-height: 1.95rem;
 }
 .about-logo .intro-text {
   text-align: center;
+  max-width: 700px;
 }
 .about-logo .specimen {
   margin: 2rem 0;
@@ -381,6 +716,14 @@ body footer .container .foot-note {
   text-align: center;
   font-family: "cocogoose", sans-serif;
 }
+@media screen and (min-width: 960px) {
+  .events .specimen-past {
+    width: 70%;
+    margin: 2rem auto 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
 .events .specimen-past img {
   width: 100%;
   max-width: 400px;
@@ -410,6 +753,11 @@ body footer .container .foot-note {
 }
 .events .specimen-past:hover .overlay-text {
   display: none;
+}
+
+.desk {
+  background-color: rgba(39, 42, 49, 0.9);
+  color: #d3d3d3;
 }
 
 /*# sourceMappingURL=style.css.map */
