--- a/style.scss
+++ b/style.scss
@@ -52,17 +52,19 @@ body {
 .menu-controls {
   position: relative;
 }
-  .menu {
+.exit,  
+.menu {
     width: 3.5rem;
     position: absolute;
     left: 1.5rem;
     top: 1.5rem;
     z-index: 2500;
+    cursor: pointer;
   }
 
 .header {
   position: relative; //fixed earlier for mobile menu support
-  display: flex;
+  display: block;
   z-index: 1000;
  
 
@@ -75,6 +77,7 @@ body {
       margin-left: 820px;
       display: block;
       z-index: 50000;
+      cursor: pointer;
     }
   }
   
@@ -84,19 +87,29 @@ body {
     }
   }
  
+  @media screen and (max-width: 767px){
     .navbar {
-      position: fixed;
-      padding: 6rem 2rem;
-      margin-bottom: 2rem;
-      background-color: #ec5242;
-      z-index: 10000;
-      width: 90%;
-      height: 100%;
-      overflow: auto;
-      display: none;
-      flex-direction: column;
-      transform: transform(250ms, ease-in-out);
+      width: 100%;
+      nav {
+        position: fixed;
+        padding: 6rem 2rem;
+        margin-bottom: 2rem;
+        background-color: #ec5242;
+        z-index: 10000;
+        width: 90%;
+        height: 100%;
+        overflow: auto;
+        display: flex;
+        flex-direction: column;
+        transform: transform(250ms, ease-in-out);
 
+        .exit {
+          display: block;
+          z-index: 1000000;
+        }
+
+      }
+      
       .logo {
         display: none;
       }
@@ -136,14 +149,15 @@ body {
         opacity: 0.1;
       }
   }
+}
   // Media queries for nav bar starts here
   @media screen and (min-width: 768px) {
     .navbar {
-      position: relative;
+      position: absolute;
       padding: 0;
       margin: 0;
-      background-color: #fff;
-      z-index: 10000;
+      background-image: url(./images/floral-texture.jpg);
+      z-index: 10000000;
       width: 100%;
       height: 6rem;
       overflow: hidden;
@@ -152,6 +166,7 @@ body {
       align-items: center;
       display: flex;
       
+      .exit,
       .liner {
         display: none; // Separation of menu for mobile screens
       }
